hard-gists/58673e7bda3767bf82b1/run.log
=== Docker Run Log for 58673e7bda3767bf82b1 ===
Started at: Mi 29. Okt 16:07:41 CET 2025

[2025-10-29 16:07:42] START: Running container for 58673e7bda3767bf82b1
[2025-10-29 16:07:42] SUCCESS: Container 4ff075259e4242e8537f3e2df3116788b74c18bb48dcca0c26212f88134c5df0 started for 58673e7bda3767bf82b1
=== Container logs for 58673e7bda3767bf82b1 ===
  File "/snippet.py", line 82
    print "\n%s" % Glyphs.fonts[0].masters[thisMainIndex].name
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 58673e7bda3767bf82b1 ===
[2025-10-29 16:07:44] INFO: Container 4ff075259e4242e8537f3e2df3116788b74c18bb48dcca0c26212f88134c5df0 has stopped
